--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,12 @@
       href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&family=Ephesis&family=Gemunu+Libre:wght@500;700;800&family=Happy+Monkey&family=Monoton&family=Unica+One&display=swap"
       rel="stylesheet"
     />
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
